Improvements on code detected by SonarQube